unlock page: fix spacing

--- a/src/assets/sass/pages/unlock.scss
+++ b/src/assets/sass/pages/unlock.scss
@@ -21,6 +21,13 @@
     border: 1px solid #e6e8ec !important;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.04);
     border-radius: 8px;
+    &:hover {
+      background: none;
+      border-color: #1392ff !important;
+    }
+    .method {
+      gap: 15px;
+    }
     .arrow {
       width: 13.01px;
       height: 16px;
